--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "5432:5432"
   web:
     build:
-      context: app
+      context: .
       dockerfile: Dockerfile
     command: bash -c "sleep 5 && python manage.py runsslserver 0.0.0.0:8000"
     volumes:
