--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,9 +1,9 @@
-Django==2.0.5
-psycopg2==2.7.4
-gunicorn==19.7.1
+Django==2.2.2
+psycopg2-binary==2.8.2
+gunicorn==19.9.0
 shortuuid==0.5.0
 django-sslserver==0.20
-django-cors-headers==2.2.0
+django-cors-headers==3.0.2
 lti==0.9.2
-django-bootstrap4==0.0.6
-alosi==1.0.0
+django-bootstrap4==0.0.8
+alosi==2.1.1
